# rid3

./: .gitignore  Cargo.toml  README.md  index.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-pages.yaml
src/: main.rs
src/components/: file_loader.rs  id3_edit.rs  id3_tag.rs  mod.rs  mp3_audio.rs  popup.rs
src/components/bulma/: mod.rs  modal.rs
src/state/: mod.rs
