[package]
name = "ride3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
gloo = "0.8.0"
gloo-file = "0.2.3"
gloo-net = { version = "0.2.6" }
id3 = "1.6.0"
js-sys = "0.3.61"
material-yew = { version = "0.3.0", features = ["button"] }
# scraper = "0.15.0"
serde = "1.0.152"
wasm-bindgen-futures = "0.4.34"
wasm-cookies = "0.2.1"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yewdux = "0.9.2"
